# testMPI

./: .cproject  .project  CMakeLists.txt  main.cpp
Parallel/: MPI.cpp  MPI.h  MPIconfig.hpp
Tools/: CMakeLists.txt  MyUtilClass.cpp
testMPI/: main.cpp
testMPI/Parallel/: CMakeLists.txt  MPI.cpp
